--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,5 +12,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thanks for the suggestion🙏🏼'
+        issue-message: 'Thanks for raising the issue wait for it to get assigned.'
         pr-message: 'Welcome to the community 🤓 Hoping for more good contributions🎈'
