--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           ignore-comments: true
-          labels-synonyms: '{"SSoC22":["SSOC","SSOC22","ssoc","Ssoc","SSoC"]}'
+          labels-synonyms: '{"SSOC":["SSOC","SSOC22","ssoc","Ssoc","SSoC"]}'
