--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,16 +1,16 @@
-name: Greetings
+# name: Greetings
 
-on: [pull_request, issues]
+# on: [pull_request, issues]
 
-jobs:
-  greeting:
-    runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
-    steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thanks for raising the issue wait for it to get assigned.'
-        pr-message: 'Welcome to the community 🤓 Hoping for more good contributions🎈'
+# jobs:
+#   greeting:
+#     runs-on: ubuntu-latest
+#     permissions:
+#       issues: write
+#       pull-requests: write
+#     steps:
+#     - uses: actions/first-interaction@v1
+#       with:
+#         repo-token: ${{ secrets.GITHUB_TOKEN }}
+#         issue-message: 'Thanks for raising the issue wait for it to get assigned.'
+#         pr-message: 'Welcome to the community 🤓 Hoping for more good contributions🎈'
